// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationsInfoCallOut renders when Notifications plugin is installed 1`] = `
<div>
  <div
    class="euiCallOut euiCallOut--primary"
  >
    <div
      class="euiCallOutHeader"
    >
      <span
        class="euiCallOutHeader__title"
      >
        Destinations have become channels in Notifications.
      </span>
    </div>
    <div
      class="euiText euiText--small"
    >
      <div
        class="euiTextColor euiTextColor--default"
      >
        <p>
          Your destinations have been migrated to Notifications, a new centralized place to manage your notification channels. Destinations will be deprecated going forward. 
          <a
            class="euiLink euiLink--primary"
            href="https://opensearch.org/docs/monitoring-plugins/alerting/monitors/#questions-about-destinations"
            rel="noopener noreferrer"
            target="_blank"
          >
            Learn more
          </a>
        </p>
        <div>
          <a
            class="euiLink euiLink--primary"
            href="https://opensearch.org/docs/monitoring-plugins/alerting/monitors/#questions-about-destinations"
            rel="noopener noreferrer"
            target="_blank"
          >
            EuiIconMock
          </a>
        </div>
        <a
          class="euiLink euiLink--primary"
          href="https://opensearch.org/docs/monitoring-plugins/alerting/monitors/#questions-about-destinations"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="euiScreenReaderOnly"
          >
            (opens in a new tab or window)
          </span>
        </a>
        <p />
        <div
          class="euiSpacer euiSpacer--l"
        />
        <a
          class="euiButton euiButton--primary"
          href="/app/notifications-dashboards#/channels"
          rel="noreferrer"
        >
          <span
            class="euiButtonContent euiButton__content"
          >
            <span
              class="euiButton__text"
            >
              View in Notifications
            </span>
          </span>
        </a>
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--l"
  />
</div>
`;

exports[`NotificationsInfoCallOut renders when Notifications plugin is not installed 1`] = `
<div>
  <div
    class="euiCallOut euiCallOut--danger"
  >
    <div
      class="euiCallOutHeader"
    >
      <div>
        EuiIconMock
      </div>
      <span
        class="euiCallOutHeader__title"
      >
        Unable to send notifications. Notifications plugin is required.
      </span>
    </div>
    <div
      class="euiText euiText--small"
    >
      <div
        class="euiTextColor euiTextColor--default"
      >
        <p>
          Destinations will be deprecated going forward. Install the Notifications plugin for a new centralized place to manage your notification channels.
        </p>
        <p>
          Existing destinations will be automatically migrated once Notifications plugin is installed.
        </p>
        <div
          class="euiSpacer euiSpacer--l"
        />
        <a
          class="euiButton euiButton--primary"
          href="https://opensearch.org/docs/monitoring-plugins/alerting/monitors/#questions-about-destinations"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="euiButtonContent euiButtonContent--iconRight euiButton__content"
          >
            <div>
              EuiIconMock
            </div>
            <span
              class="euiButton__text"
            >
              View install instructions
            </span>
          </span>
        </a>
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--l"
  />
</div>
`;
